[package]
name = "fbp"
version = "0.1.0"
authors = ["PESA Rust developers <rustdev@pesa.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An implementation of Flow Based Programming for the Rust language"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0.123", features = ["rc", "serde_derive"] }
serde_derive = "1.0.117"
serde_json = "1.0.64"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = { version = "0.3.*" }
strum = { version = "0.20", features = ["derive"] }
strum_macros = "0.20.*"
async-trait = "0.1.50"
actix-rt = "2.2.0"

[features]
fbp_network = []

